tests/ui/reachable/expr_if.stderr
error: unreachable block in `if` or `while` expression
  --> $DIR/expr_if.rs:7:17
   |
LL |       if {return} {
   |  _________------__^
   | |         |
   | |         any code following this expression is unreachable
LL | |         println!("Hello, world!");
LL | |     }
   | |_____^ unreachable block in `if` or `while` expression
   |
note: the lint level is defined here
  --> $DIR/expr_if.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable statement
  --> $DIR/expr_if.rs:27:5
   |
LL |         return;
   |         ------ any code following this expression is unreachable
...
LL |     println!("But I am.");
   |     ^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: this error originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

